--- a/app/src/main/res/layout/activity_search_result.xml
+++ b/app/src/main/res/layout/activity_search_result.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:orientation="vertical"
     tools:context="pizzasearch.f0ris.com.pizzasearchassignment.Activities.SearchResultActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -28,4 +29,4 @@
         android:layout_height="match_parent"
         tools:listitem="@layout/search_result_item" />
 
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
