--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -21,9 +21,10 @@
 
         <CheckBox
             android:id="@+id/checkBox"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/emulate_NY" />
+            android:text="@string/emulate_NY"
+            android:paddingRight="5dp"/>
         <Button
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
