load more listview

--- a/app/src/main/res/layout/activity_search_result.xml
+++ b/app/src/main/res/layout/activity_search_result.xml
@@ -23,7 +23,7 @@
     </android.support.design.widget.AppBarLayout>
 
 
-    <ListView
+    <pizzasearch.f0ris.com.pizzasearchassignment.Views.LoadMoreListView
         android:id="@+id/search_result_list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
