--- a/app/src/main/res/layout/content_venue_detail.xml
+++ b/app/src/main/res/layout/content_venue_detail.xml
@@ -10,7 +10,7 @@
         android:id="@+id/photo"
         android:layout_width="110dp"
         android:layout_height="110dp"
-        android:padding="5dp"
+        android:padding="10dp"
 
         />
 
@@ -29,7 +29,7 @@
         android:text="4 Friends Coffee"
         android:textAppearance="?android:attr/textAppearanceLarge" />
     <TextView
-        android:id="@+id/venue_category"
+        android:id="@+id/category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/name"
@@ -42,6 +42,17 @@
         android:textColor="@android:color/black"
         />
 
+    <TextView
+        android:id="@+id/address_title"
+        android:padding="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/address_title"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@android:color/black"
+        android:layout_below="@+id/photo"
+        android:layout_toLeftOf="@+id/address"
+        android:layout_toStartOf="@+id/address" />
 
     <TextView
         android:id="@+id/address"
@@ -51,10 +62,8 @@
         android:text="ул. Постышева, 117а (просп. Комсомольский), Донецк, 83000"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_below="@+id/photo"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="21dp"
-        android:layout_marginStart="21dp" />
+        android:layout_toRightOf="@+id/photo"
+        android:layout_toEndOf="@+id/photo" />
 
     <TextView
         android:id="@+id/rating"
