--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -20,7 +20,7 @@
         android:layout_centerHorizontal="true">
 
         <CheckBox
-            android:id="@+id/checkBox"
+            android:id="@+id/emulate_NY_checkBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/emulate_NY"
